# Configurable-Data-Processing

./: CMakeLists.txt  README.md
config/: settings.txt
include/: AudioProcessor.hpp  Configuration.hpp  ImageProcessor.hpp  NumericProcessor.hpp  Processor.hpp  ProcessorFactory.hpp  TextProcessor.hpp  Utilities.hpp
src/: AudioProcessor.cpp  Configuration.cpp  ImageProcessor.cpp  NumericProcessor.cpp  Processor.cpp  ProcessorFactory.cpp  TextProcessor.cpp  Utilities.cpp  config  main.cpp
